[package]
name = "tlm"
version = "0.1.0"
edition = "2021"
publish = false # TODO
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs", "images/*", "data/*",]
description = "Track List Manager manages playlists and plays tracks."
homepage = "https://github.com/mark-summerfield/tlm" # TODO check
readme = "README.md"
keywords = [ "fltk", "audio", "music", "player", "gui",]
categories = [ "multimedia::audio",]
license = "GPL-3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "^1"
flate2 = { version = "^1.0", default-features = true }
chrono = "^0.4"
dirs = "^4"
lofty = "^0.5"
num = "^0.4"
rust-ini = "^0.18"
rustc_version_runtime = "^0.2"
state = "^0.5"
walkdir = "^2"

[dependencies.fltk]
version = "^1.2"
features = [ "no-pango",]
git = "https://github.com/fltk-rs/fltk-rs"

[dependencies.soloud]
version = "^1"
git = "https://github.com/moalyousef/soloud-rs"

[badges.maintenance]
status = "passively-maintained"
