cargo-features = [ "strip",]

[package]
name = "tlm"
version = "0.9.2"
edition = "2021"
publish = true
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs", "images/*", "data/*",]
description = "Track List Manager manages playlists and plays tracks."
homepage = "https://github.com/mark-summerfield/tlm"
readme = "README.md"
keywords = [ "fltk", "audio", "music", "player", "gui",]
categories = [ "multimedia::audio",]
license = "GPL-3.0"

[dependencies]
anyhow = "^1"
chrono = "^0.4"
dirs = "^4"
lofty = "^0.5"
num = "^0.4"
rust-ini = "^0.18"
rustc_version_runtime = "^0.2"
state = "^0.5"
walkdir = "^2"

[dependencies.flate2]
version = "^1.0"
default-features = true

[dependencies.fltk]
version = "^1.2"
features = [ "no-pango",]
git = "https://github.com/fltk-rs/fltk-rs"

[dependencies.soloud]
version = "^1"
git = "https://github.com/moalyousef/soloud-rs"

[profile.release]
strip = true
opt-level = "z"
lto = true

[badges.maintenance]
status = "passively-maintained"
